--- a/index.html
+++ b/index.html
@@ -584,16 +584,21 @@ merging cells, with {{{&quot;rowHeaders&quot;: true}}} and {{{colWidths}}} set (
 	[&quot;пт, 14.04&quot;,&quot;23:20 (450)&quot;,null,null,null],
 	[&quot;сб, 15.04&quot;,&quot;22:00 (450)&quot;,null,null,null],
 	[&quot;вс, 16.04&quot;,&quot;15:45 (350)&quot;,null,null,null],
-	[&quot;прочие см тут: https://msk.subscity.ru/movies/36035-ghost-in-the-shell&quot;,&quot;&quot;,null,null,null],
-	[&quot;/про проблему с colWidth: https://github.com/handsontable/handsontable/issues/3171, workaround: http://jsfiddle.net/7u1kxjLe/16/&quot;,null,null,null,null]
+	[&quot;see others at: https://msk.subscity.ru/movies/36035-ghost-in-the-shell&quot;,&quot;&quot;,null,null,null],
+	[&quot;/about the colWidth issue: https://github.com/handsontable/handsontable/issues/3171, workaround: http://jsfiddle.net/7u1kxjLe/16/&quot;,null,null,null,null]
 ],
 &quot;options&quot;:{
-	&quot;mergeCells&quot;: [{    &quot;row&quot;: 9,    &quot;col&quot;: 0,    &quot;rowspan&quot;: 1,    &quot;colspan&quot;: 5},{    &quot;row&quot;: 10,    &quot;col&quot;: 0,    &quot;rowspan&quot;: 1,    &quot;colspan&quot;: 5}],
-	&quot;colWidths&quot;: [100,250,0,0,0],
+	&quot;mergeCells&quot;: [
+		{ &quot;row&quot;: 9,  &quot;col&quot;: 0, &quot;rowspan&quot;: 1, &quot;colspan&quot;: 5 },
+		{ &quot;row&quot;: 10, &quot;col&quot;: 0, &quot;rowspan&quot;: 1, &quot;colspan&quot;: 5}
+	],
+	&quot;colWidths&quot;: [100, 250, 0, 0, 0],
 	&quot;rowHeaders&quot;: true
 }}
 !
 !%/
+no params (for now, won't save):
+&lt;&lt;handsontable&gt;&gt;
 {{{data}}} param {{PoGc{seems rather useless, learn how to set read-only}}}:
 &lt;&lt;handsontable data:'[
 	[&quot;xx&quot;, &quot;Ford&quot;, &quot;Volvo&quot;, &quot;Toyota&quot;, &quot;Honda&quot;],
@@ -603,8 +608,6 @@ merging cells, with {{{&quot;rowHeaders&quot;: true}}} and {{{colWidths}}} set (
 ]'&gt;&gt;
 storing to SomeTiddler tiddler:
 &lt;&lt;handsontable [[SomeTiddler]]&gt;&gt;
-no params (for now, won't save):
-&lt;&lt;handsontable&gt;&gt;
 column headers (using {{{colHeaders}}}; see {{DDn{problems when adding new columns}}}), row headers (why {{DDn{3d row header is cut off}}}?), custom renderer to wikify only the 2d column:
 &lt;&lt;handsontable [[##some section]] options:'{
 	colHeaders: [&quot;custom title&quot;],
@@ -637,7 +640,7 @@ column headers (using {{{colHeaders}}}; see {{DDn{problems when adding new colum
 {&quot;data&quot;:[
 	[1,&quot;//wikified?//&quot;,&quot;|3|4|5|6|7|8|&quot;],
 	[2,3,&quot;this ''works!'' +++[how about..]some slider?===&quot;],
-	[3,4,&quot;this is implemented using [[HandsontablePlugin]] ([[an external link|http://yakovl.bplaced.net/TW/Spreadsheets.html]] to the repo)&quot;],
+	[3,4,&quot;this is implemented using [[HandsontablePlugin]] ([[an external link|https://yakovl.github.io/TiddlyWiki_HandsontablePlugin/]] to the repo)&quot;],
 	[null,null,&quot;{{DDn{with only 3d column wikified, new columns are not added on pressing right from here!}}}&quot;]
 ],
 &quot;options&quot;:{}}
